virt/labs/ha-loadbalance/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: ha-loadbalance
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
