virt/labs/ha-loadbalance/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: helloworld
  namespace: ha-loadbalance
  annotations:
    router.openshift.io/cookie_name: "hello"
spec:
  host: hello-ha-loadbalance.apps.ocp4.example.com
  port:
    targetPort: 80
  to:
    kind: Service
    name: helloworld
